# twitch-tui

./: Cargo.toml  HANDOFF.md  README.md
docs/superpowers/plans/: 2026-04-17-polish-and-features.md
docs/superpowers/specs/: 2026-04-16-twitch-tui-design.md  2026-04-17-polish-and-features-design.md
src/: app.rs  config.rs  db.rs  main.rs  notify.rs  player.rs  thumb.rs
src/twitch/: api.rs  auth.rs  irc.rs  mod.rs
src/ui/: browse.rs  chat.rs  detail.rs  format.rs  help.rs  mod.rs  quality.rs  status.rs  theme.rs
