[package]
name = "twitch-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal TUI for browsing, watching, and chatting on Twitch streams"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
twitch-irc = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "6"
clap = { version = "4", features = ["derive"] }
ratatui-image = "4"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
